EmailValidationTest improvement, minor modifications